--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,3 @@
-$bg-colorpink: rgb(247, 7, 118);
-$black: rgb(20, 16, 16);
-$lyrics: rgb(255, 255, 255);
 
 /*---HEADER---*/
 .logo{
@@ -9,7 +6,7 @@ $lyrics: rgb(255, 255, 255);
 }
 .navbar{
     background-color: $bg-colorpink;
-    color: $black;
+    color: rgb(20, 16, 16);
 
     .navbar-collapse{
     justify-content: end;
