--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+@import: "scss/variables.css";
 
 /*---HEADER---*/
 .logo{
@@ -6,7 +7,7 @@
 }
 .navbar{
     background-color: $bg-colorpink;
-    color: rgb(20, 16, 16);
+    color: $black;
 
     .navbar-collapse{
     justify-content: end;
