--- a/scss/main.scss
+++ b/scss/main.scss
@@ -130,3 +130,101 @@
     }
 }
 /*-----OUR MISSION END----*/
+
+@media only screen and (min-width:320px) and (max-width: 560px) {
+    .title{
+        font-size: 2.25em;
+        margin: 0px;
+    }
+
+    .om-main{
+        flex-direction: column;
+    }
+
+    .om-iframe{
+        width: 80vh;
+    }
+
+    .om-paragraph{
+        padding: 0px;
+    }
+
+    .main-form{
+        flex-direction: column;
+    }
+
+    .iframe-contact{
+        width: 80vh;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .bg-form{
+        width: 80vh;
+    }
+
+    .form-title{
+        font-size: 20px;
+    }
+
+    .input-form{
+        width: 210px;
+        margin: 10px 45px;
+    }
+
+    .textarea{
+        margin: 15px;
+        padding: 0px;
+    }
+
+    .button-form{
+        width: 270px;
+        margin: 15px;
+    }
+}
+
+@media screen and (min-width: 561px) and (max-width:1024px) {
+    .om-main{
+        flex-direction: column;
+    }
+
+    .om-iframe{
+        width: 100vh;
+    }
+
+    .om-paragraph{
+        padding: 0px;
+    }
+    .main-form{
+        flex-direction: column;
+    }
+
+    .iframe-contact{
+        width: 100vh;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .bg-form{
+        width: 100vh;
+    }
+
+    .form-title{
+        font-size: 25px;
+    }
+
+    .input-form{
+        width: 280px;
+        margin: 10px 45px;
+    }
+
+    .textarea{
+        margin: 15px 50px;
+        padding: 0px;
+    }
+
+    .button-form{
+        width: 280px;
+        margin: 15px 50px;
+    }
+}
