--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,3 +3,12 @@
     background-position: center;
 }
 
+@mixin no-repeat {
+    background-repeat: no-repeat;
+}
+
+@mixin typo1 {
+    font-family:   Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+}
