--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,68 +2,8 @@
 @import "./media";
 @import "./header";
 @import "./mixins";
-@import "./typo";
+@import "./bgpages";
 @import "./jumbo";
 @import "./nav";
 @import "./footer";
 @import "./form";
-
-
-/*----ABOUT US MAIN ----*/
-.bg-au{
-    background-image: url("../media/images/backgr.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 20px;
-
-    .au-title{
-        color: $lyrics;
-        text-align: center;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 1.563em;
-        font-weight: bold;
-        font-style: italic;
-    }
-
-    .au-paragraph{
-        margin: 1.563rem;
-        color: $lyrics;
-        text-align: justify;
-    }
-}
-
-/*-----ABOUT US END---*/
-
-/*---- OUR MISSION START---*/
-.bg-ourmission{
-    background-image: url(../media/images/background.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 20px;
-
-    .om-main{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 15px;
-        padding: 10px;
-
-        .om-title{
-            font-family: 'Acme', sans-serif;
-            font-size: 1.563em;
-            font-weight: bold;
-            font-style: italic;
-            color: $lyrics;
-        }
-
-        .om-paragraph{
-            margin-top: 15px;
-            color: $lyrics;
-            text-align: justify;
-            line-height: 20px;
-            padding-right: 60px;
-        }        
-    }
-}
-/*-----OUR MISSION END----*/
-
