--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,7 +1,7 @@
 .main-form{
     background-image: url("../media/images/backgr.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+    @include no-repeat;
+    @include img-item;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -19,8 +19,7 @@
             .form-title{
                 text-align: center;
                 color: $lyrics;
-                font-family: Arial, Helvetica, sans-serif;
-                font-weight: normal;
+                @include typo1;
                 font-size: 25px;
                 word-spacing: 5px;
                 margin: 20px 0;
