--- a/scss/_jumbo.scss
+++ b/scss/_jumbo.scss
@@ -1,34 +1,25 @@
 /*---JUMBOTRON- INDEX --*/
 .jumbotron{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    @include flex;
     background-image: url("../media/images/sobrenosotros.png");
-    background-size: cover;
-    background-position: center;
+    @include img-item;
     height: 450px;
     border-radius: 0;
 
     .title{
+        @include typo1;
         color: $lyrics;
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 3.75em;
-        font-weight: bold;
         font-style: italic;
-        text-transform: uppercase;
         text-align: center;
     }
 
     .subtitle{
+        @include typo1;
         color: $lyrics;
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 1.875em;
-        font-weight: bold;
         font-style: italic;
         text-align: center;
     }
 }
-
 /* JUMBOTRON END*/ 
