--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -12,3 +12,11 @@
     font-weight: bold;
     text-transform: uppercase;
 }
+
+@mixin flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
