--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,7 +14,7 @@
         padding: 3px 6px;
 
         &:hover{
-            transform: scale(1.1);
+            @include hover;
         }
     }
 }
