--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 561px) and (max-width:1024px) {
+@media only screen and (min-width: 561px), only screen and (max-width:1024px) {
     .om-main{
         flex-direction: column;
     }
@@ -44,7 +44,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width:560px) {
+@media only screen and (min-width: 320px), only screen and (max-width:560px) {
     .title{
         font-size: 2.25em;
         margin: 0px;
