--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -17,9 +17,8 @@
             text-shadow: 0 0 3px $black;
             
             &:hover{
-                    transform: scale(1.1);
+                    @include hover;
                     margin: 0px 20px;
-                    transition: all ease;
                     color:$black;
             }
         }
