correcto las medias

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,9 @@
-@import "./variables";
-@import "./media";
-@import "./header";
-@import "./mixins";
-@import "./bgpages";
-@import "./jumbo";
-@import "./nav";
-@import "./footer";
-@import "./form";
+@import "scss/variables";
+@import "scss/media";
+@import "scss/header";
+@import "scss/mixins";
+@import "scss/bgpages";
+@import "scss/jumbo";
+@import "scss/nav";
+@import "scss/footer";
+@import "scss/form";
