--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,110 @@
+@media screen and (min-width: 561px) and (max-width: 1024px) {
+  .om-main {
+    flex-direction: column; }
+  .om-iframe {
+    width: 100vh; }
+  .om-paragraph {
+    padding: 0px; }
+  .main-form {
+    flex-direction: column; }
+  .iframe-contact {
+    width: 100vh;
+    margin: 0px;
+    padding: 0px; }
+  .bg-form {
+    width: 100vh; }
+  .form-title {
+    font-size: 25px; }
+  .input-form {
+    width: 280px;
+    margin: 10px 45px; }
+  .textarea {
+    margin: 15px 50px;
+    padding: 0px; }
+  .button-form {
+    width: 280px;
+    margin: 15px 50px; } }
+
+@media screen and (min-width: 320px) and (max-width: 560px) {
+  .title {
+    font-size: 2.25em;
+    margin: 0px; }
+  .om-main {
+    flex-direction: column; }
+  .om-iframe {
+    width: 80vh; }
+  .om-paragraph {
+    padding: 0px; }
+  .main-form {
+    flex-direction: column; }
+  .iframe-contact {
+    width: 80vh;
+    margin: 0px;
+    padding: 0px; }
+  .bg-form {
+    width: 80vh; }
+  .form-title {
+    font-size: 20px; }
+  .input-form {
+    width: 210px;
+    margin: 10px 45px; }
+  .textarea {
+    margin: 15px;
+    padding: 0px; }
+  .button-form {
+    width: 270px;
+    margin: 15px; } }
+
 /*---HEADER---*/
 .logo {
   width: 90px;
-  height: 60px;
-}
-.navbar {
-  background-color: rgb(247, 7, 118);
-  color: rgb(20, 16, 16);
-}
-.navbar .navbar-collapse {
-  justify-content: end;
-}
-.navbar .navbar-nav {
-  align-items: flex-end;
-}
-.navbar .navbar-nav .nav-link {
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.25em;
-  font-weight: bold;
-  font-style: normal;
-  text-shadow: 0 0 3px rgb(20, 16, 16);
-}
-.navbar .navbar-nav .nav-link:hover {
-  transform: scale(1.1);
-  margin: 0px 20px;
-  transition: all ease;
-  color: rgb(20, 16, 16);
-}
-.navbar .navbar-toggler {
-  margin: 0px 10px;
-}
+  height: 60px; }
 
-/*--HEADER END---*/
+.bg-ourmission {
+  background-image: url(../media/images/background.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 20px; }
+  .bg-ourmission .om-main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 15px;
+    padding: 10px; }
+    .bg-ourmission .om-main .om-title {
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: bold;
+      text-transform: uppercase;
+      font-size: 1.563em;
+      font-style: italic;
+      color: white; }
+    .bg-ourmission .om-main .om-paragraph {
+      margin-top: 15px;
+      color: white;
+      text-align: justify;
+      line-height: 20px;
+      padding-right: 60px; }
+
+.bg-au {
+  background-image: url("../media/images/backgr.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 20px; }
+  .bg-au .au-title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    font-size: 1.563em;
+    font-style: italic; }
+  .bg-au .au-paragraph {
+    margin: 1.563rem;
+    color: white;
+    text-align: justify; }
+
 /*---JUMBOTRON- INDEX --*/
 .jumbotron {
   display: flex;
@@ -44,232 +116,118 @@
   background-size: cover;
   background-position: center;
   height: 450px;
-  border-radius: 0;
-}
-.jumbotron .title {
-  color: rgb(255, 255, 255);
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 3.75em;
-  font-weight: bold;
-  font-style: italic;
-  text-transform: uppercase;
-  text-align: center;
-}
-.jumbotron .subtitle {
-  color: rgb(255, 255, 255);
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.875em;
-  font-weight: bold;
-  font-style: italic;
-  text-align: center;
-}
+  border-radius: 0; }
+  .jumbotron .title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+    font-size: 3.75em;
+    font-style: italic;
+    text-align: center; }
+  .jumbotron .subtitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+    font-size: 1.875em;
+    font-style: italic;
+    text-align: center; }
 
 /* JUMBOTRON END*/
+.navbar {
+  background-color: #f70776;
+  color: #141010; }
+  .navbar .navbar-collapse {
+    justify-content: end; }
+  .navbar .navbar-nav {
+    align-items: flex-end; }
+    .navbar .navbar-nav .nav-link {
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      font-size: 1.25em;
+      font-style: normal;
+      text-shadow: 0 0 3px #141010; }
+      .navbar .navbar-nav .nav-link:hover {
+        transform: scale(1.1);
+        transition: all ease;
+        margin: 0px 20px;
+        color: #141010; }
+  .navbar .navbar-toggler {
+    margin: 0px 10px; }
 
-/*----ABOUT US MAIN ----*/
-.bg-au {
-  background-image: url("../media/images/backgr.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding: 20px;
-}
-.bg-au .au-title {
-  color: rgb(255, 255, 255);
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.563em;
-  font-weight: bold;
-  font-style: italic;
-}
-.bg-au .au-paragraph {
-  margin: 1.563rem;
-  color: rgb(255, 255, 255);
-  text-align: justify;
-}
-
-.item {
-  height: 300px;
-  border: 2px solid rgb(20, 16, 16);
-  filter: grayscale(100%);
-  transition: 1s;
-}
-.item:hover {
-  filter: grayscale(0%);
-}
-
-.item1 {
-  background-image: url("../media/images/1.png");
-  background-size: cover;
-  background-position: center;
-}
-
-.item2 {
-  background-image: url("../media/images/2.png");
-  background-size: cover;
-  background-position: center;
-}
-
-.item3 {
-  background-image: url("../media/images/3.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.item4 {
-  background-image: url("../media/images/4.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.item5 {
-  background-image: url("../media/images/5.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.item6 {
-  background-image: url("../media/images/6.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.item7 {
-  background-image: url("../media/images/7.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.item8 {
-  background-image: url("../media/images/8.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.item9 {
-  background-image: url("../media/images/9.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-/*-----ABOUT US END---*/
-
-/*---- OUR MISSION START---*/
-.bg-ourmission {
-  background-image: url(../media/images/background.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding: 20px;
-}
-.bg-ourmission .om-main {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 15px;
+/*---FOOTER START---*/
+.footer {
+  color: white;
+  background-color: #141010;
   padding: 10px;
-}
-.bg-ourmission .om-main .om-title {
-  font-family: "Acme", sans-serif;
-  font-size: 1.563em;
-  font-weight: bold;
-  font-style: italic;
-  color: rgb(255, 255, 255);
-}
-.bg-ourmission .om-main .om-paragraph {
-  margin-top: 15px;
-  color: rgb(255, 255, 255);
-  text-align: justify;
-  line-height: 20px;
-  padding-right: 60px;
-}
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .footer .social-media i {
+    color: #f70776;
+    font-size: 20px;
+    text-align: center;
+    padding: 3px 6px; }
+    .footer .social-media i:hover {
+      transform: scale(1.1);
+      transition: all ease; }
 
-/*-----OUR MISSION END----*/
-/*----- contact -----*/
-* {
-  margin: 0;
-  padding: 0;
-}
-
+/*-----FOOTER END----*/
 .main-form {
   background-image: url("../media/images/backgr.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-}
-.main-form .div-form {
-  margin: 30px 20px;
-}
-.main-form .div-form .bg-form {
-  align-items: center;
-  background-color: rgb(20, 16, 16);
-  width: 360px;
-  border: 1px solid rgb(247, 7, 118);
-  border-radius: 10px;
-}
-.main-form .div-form .bg-form .form-title {
-  text-align: center;
-  color: rgb(255, 255, 255);
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: 25px;
-  word-spacing: 5px;
-  margin: 20px 0;
-}
-.main-form .div-form .bg-form .input-form {
-  width: 290px;
-  height: 35px;
-  margin: 10px 30px;
-  padding: 0 10px;
-  color: rgb(20, 16, 16);
-  text-align: center;
-}
-.main-form .div-form .bg-form textarea {
-  margin: 10px 30px;
-  padding: 0 10px;
-  color: rgb(20, 16, 16);
-  text-align: center;
-}
-.main-form .div-form .bg-form .button-form {
-  width: 290px;
-  margin: 8px 0 30px 30px;
-  border: 1px solid rgb(247, 7, 118);
-  color: rgb(20, 16, 16);
-  box-shadow: 0 2px 0 rgb(104, 7, 71);
-  border-radius: 3px;
-}
-.main-form .div-form .bg-form .button-form:hover {
-  transform: scale(1.1);
-  transition: all is ease;
-}
-.main-form .div-form .iframe-contact {
-  margin-right: 16px;
-  padding-right: 10px;
-  width: 500px;
-  height: 400px;
-  border-radius: 20px;
-}
+  justify-content: space-around; }
+  .main-form .div-form {
+    margin: 30px 20px; }
+    .main-form .div-form .bg-form {
+      align-items: center;
+      background-color: #141010;
+      width: 360px;
+      border: 1px solid #f70776;
+      border-radius: 10px; }
+      .main-form .div-form .bg-form .form-title {
+        text-align: center;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 25px;
+        word-spacing: 5px;
+        margin: 20px 0; }
+      .main-form .div-form .bg-form .input-form {
+        width: 290px;
+        height: 35px;
+        margin: 10px 30px;
+        padding: 0 10px;
+        color: #141010;
+        text-align: center; }
+      .main-form .div-form .bg-form textarea {
+        margin: 10px 30px;
+        padding: 0 10px;
+        color: #141010;
+        text-align: center; }
+      .main-form .div-form .bg-form .button-form {
+        width: 290px;
+        margin: 8px 0 30px 30px;
+        border: 1px solid #f70776;
+        color: #141010;
+        box-shadow: 0 2px 0 #680747;
+        border-radius: 3px; }
+        .main-form .div-form .bg-form .button-form:hover {
+          transform: scale(1.1);
+          transition: all ease; }
+    .main-form .div-form .iframe-contact {
+      margin-right: 16px;
+      padding-right: 10px;
+      width: 500px;
+      height: 400px;
+      border-radius: 20px; }
 
 /*--- FIN CONTACT---*/
-/*---FOOTER START---*/
-.footer {
-  color: rgb(255, 255, 255);
-  background-color: rgb(20, 16, 16);
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.footer .social-media i {
-  color: rgb(247, 7, 118);
-  font-size: 20px;
-  text-align: center;
-  padding: 3px 6px;
-}
-.footer .social-media i:hover {
-  transform: scale(1.5);
-}
-
-/*-----FOOTER END----*/
-
-/*# sourceMappingURL=style.css.map */
