--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,33 @@
+@media screen and (min-width: 320px) and (max-width: 560px) {
+  .title {
+    font-size: 2.20em;
+    margin: 0px; }
+  .om-main {
+    flex-direction: column; }
+  .om-iframe {
+    width: 50vh; }
+  .om-paragraph {
+    padding: 0px; }
+  .main-form {
+    flex-direction: column; }
+  .iframe-contact {
+    width: 50vh;
+    margin: 0px;
+    padding: 0px; }
+  .bg-form {
+    width: 50vh; }
+  .form-title {
+    font-size: 20px; }
+  .input-form {
+    width: 210px;
+    margin: 10px 45px; }
+  .textarea {
+    margin: 15px;
+    padding: 0px; }
+  .button-form {
+    width: 260px;
+    margin: 15px; } }
+
 @media screen and (min-width: 561px) and (max-width: 1024px) {
   .om-main {
     flex-direction: column; }
@@ -25,36 +55,6 @@
     width: 280px;
     margin: 15px 50px; } }
 
-@media screen and (min-width: 320px) and (max-width: 560px) {
-  .title {
-    font-size: 2.25em;
-    margin: 0px; }
-  .om-main {
-    flex-direction: column; }
-  .om-iframe {
-    width: 80vh; }
-  .om-paragraph {
-    padding: 0px; }
-  .main-form {
-    flex-direction: column; }
-  .iframe-contact {
-    width: 80vh;
-    margin: 0px;
-    padding: 0px; }
-  .bg-form {
-    width: 80vh; }
-  .form-title {
-    font-size: 20px; }
-  .input-form {
-    width: 210px;
-    margin: 10px 45px; }
-  .textarea {
-    margin: 15px;
-    padding: 0px; }
-  .button-form {
-    width: 270px;
-    margin: 15px; } }
-
 /*---HEADER---*/
 .logo {
   width: 90px;
@@ -69,9 +69,7 @@
   .bg-ourmission .om-main {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin: 15px;
-    padding: 10px; }
+    justify-content: space-between; }
     .bg-ourmission .om-main .om-title {
       font-family: Arial, Helvetica, sans-serif;
       font-weight: bold;
@@ -83,8 +81,7 @@
       margin-top: 15px;
       color: white;
       text-align: justify;
-      line-height: 20px;
-      padding-right: 60px; }
+      line-height: 20px; }
 
 .bg-au {
   background-image: url("../media/images/backgr.png");
@@ -122,7 +119,7 @@
     font-weight: bold;
     text-transform: uppercase;
     color: white;
-    font-size: 3.75em;
+    font-size: 2.75em;
     font-style: italic;
     text-align: center; }
   .jumbotron .subtitle {
@@ -189,7 +186,7 @@
     .main-form .div-form .bg-form {
       align-items: center;
       background-color: #141010;
-      width: 360px;
+      width: 300px;
       border: 1px solid #f70776;
       border-radius: 10px; }
       .main-form .div-form .bg-form .form-title {
@@ -202,20 +199,19 @@
         word-spacing: 5px;
         margin: 20px 0; }
       .main-form .div-form .bg-form .input-form {
-        width: 290px;
+        width: 260px;
         height: 35px;
-        margin: 10px 30px;
+        margin: 5px 20px;
         padding: 0 10px;
         color: #141010;
         text-align: center; }
       .main-form .div-form .bg-form textarea {
-        margin: 10px 30px;
-        padding: 0 10px;
+        padding: 0 5px;
         color: #141010;
         text-align: center; }
       .main-form .div-form .bg-form .button-form {
-        width: 290px;
-        margin: 8px 0 30px 30px;
+        width: 260px;
+        margin: 5px 20px;
         border: 1px solid #f70776;
         color: #141010;
         box-shadow: 0 2px 0 #680747;
