--- a/scss/_bgpages.scss
+++ b/scss/_bgpages.scss
@@ -21,7 +21,8 @@
             margin-top: 15px;
             color: $lyrics;
             text-align: justify;
-            line-height: 20px;
+            line-height: 1.562em;
+            padding-right: 50px;
         }        
     }
 }
