--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -14,7 +14,7 @@
     }
 
     .om-paragraph{
-        padding: 0px;
+        padding: 0;
     }
 
     .main-form{
@@ -46,7 +46,7 @@
     }
 
     .button-form{
-        width: 260px;
+        width: 16.25em;
         margin: 15px;
     }
 }
