--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -12,7 +12,7 @@
         .bg-form{
             align-items: center;
             background-color:$black;
-            width: 300px;
+            width: 60vh;
             border: 1px solid $bg-colorpink;
             border-radius: 10px;
 
@@ -26,23 +26,24 @@
             }
 
             .input-form{
-                width: 260px;
+                width: 45vh;
                 height: 35px;
-                margin: 5px 20px;
+                margin: 5px 30px;
                 padding: 0 10px;
                 color: $black;
                 text-align: center;
             }
 
             textarea{
-                padding: 0 5px;
+                margin-left: 25px;
+                padding: 5px 15px;
                 color: $black;
                 text-align: center;
             }
 
             .button-form{
-                width: 260px;
-                margin: 5px 20px;
+                width: 18.75em;
+                margin: 0px 25px 10px;
                 border: 1px solid $bg-colorpink;
                 color: $black;
                 box-shadow: 0 2px 0 rgb(104, 7, 71);
