--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,3 @@
-@media screen and (min-width: 320px) and (max-width: 560px) {
-  .title {
-    font-size: 2.20em;
-    margin: 0px; }
-  .om-main {
-    flex-direction: column; }
-  .om-iframe {
-    width: 50vh; }
-  .om-paragraph {
-    padding: 0; }
-  .main-form {
-    flex-direction: column; }
-  .iframe-contact {
-    width: 50vh;
-    margin: 0px;
-    padding: 0px; }
-  .bg-form {
-    width: 50vh; }
-  .form-title {
-    font-size: 20px; }
-  .input-form {
-    width: 210px;
-    margin: 10px 45px; }
-  .textarea {
-    margin: 15px;
-    padding: 0px; }
-  .button-form {
-    width: 16.25em;
-    margin: 15px; } }
-
-@media screen and (min-width: 561px) and (max-width: 1024px) {
-  .om-main {
-    flex-direction: column; }
-  .om-iframe {
-    width: 100vh; }
-  .om-paragraph {
-    padding: 0px; }
-  .main-form {
-    flex-direction: column; }
-  .iframe-contact {
-    width: 100vh;
-    margin: 0px;
-    padding: 0px; }
-  .bg-form {
-    width: 100vh; }
-  .form-title {
-    font-size: 25px; }
-  .input-form {
-    width: 280px;
-    margin: 10px 45px; }
-  .textarea {
-    margin: 15px 50px;
-    padding: 0px; }
-  .button-form {
-    width: 280px;
-    margin: 15px 50px; } }
-
 /*---HEADER---*/
 .logo {
   width: 90px;
@@ -185,9 +128,10 @@
   .main-form .div-form {
     margin: 30px 20px; }
     .main-form .div-form .bg-form {
+      display: flex;
+      flex-direction: column;
       align-items: center;
       background-color: #141010;
-      width: 60vh;
       border: 1px solid #f70776;
       border-radius: 10px; }
       .main-form .div-form .bg-form .form-title {
@@ -207,12 +151,13 @@
         color: #141010;
         text-align: center; }
       .main-form .div-form .bg-form textarea {
-        margin-left: 25px;
-        padding: 5px 15px;
+        margin: 5px 30px;
+        padding: 0 10px;
         color: #141010;
-        text-align: center; }
+        text-align: center;
+        width: 45vh; }
       .main-form .div-form .bg-form .button-form {
-        width: 18.75em;
+        width: 45vh;
         margin: 0px 25px 10px;
         border: 1px solid #f70776;
         color: #141010;
@@ -281,3 +226,60 @@
   background-image: url("../media/images/9.jpg");
   background-size: cover;
   background-position: center; }
+
+@media screen and (max-width: 560px) {
+  .title {
+    font-size: 2.20em;
+    margin: 0px; }
+  .om-main {
+    flex-direction: column; }
+  .om-iframe {
+    width: 90%; }
+  .om-paragraph {
+    padding: 0; }
+  .main-form {
+    flex-direction: column; }
+  .iframe-contact {
+    width: 100%;
+    margin: 0px;
+    padding: 0px; }
+  .bg-form {
+    width: 50vh; }
+  .textarea {
+    width: 45vh; }
+  .form-title {
+    font-size: 20px; }
+  .input-form {
+    width: 210px;
+    margin: 10px 45px; }
+  .textarea {
+    margin: 15px;
+    padding: 0px; }
+  .button-form {
+    width: 16.25em;
+    margin: 15px; } }
+
+@media screen and (min-width: 561px) and (max-width: 1024px) {
+  .om-main {
+    flex-direction: column; }
+  .om-iframe {
+    width: 100vh; }
+  .om-paragraph {
+    padding: 0px; }
+  .main-form {
+    flex-direction: column; }
+  .iframe-contact {
+    width: 100vh;
+    margin: 0px;
+    padding: 0px; }
+  .form-title {
+    font-size: 25px; }
+  .input-form {
+    width: 280px;
+    margin: 10px 45px; }
+  .textarea {
+    margin: 15px 50px;
+    padding: 0px; }
+  .button-form {
+    width: 280px;
+    margin: 15px 50px; } }
