--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -10,9 +10,10 @@
         margin: 30px 20px;
 
         .bg-form{
+            display: flex;
+            flex-direction: column;
             align-items: center;
             background-color:$black;
-            width: 60vh;
             border: 1px solid $bg-colorpink;
             border-radius: 10px;
 
@@ -35,14 +36,15 @@
             }
 
             textarea{
-                margin-left: 25px;
-                padding: 5px 15px;
+                margin: 5px 30px;
+                padding: 0 10px;
                 color: $black;
                 text-align: center;
+                width: 45vh;
             }
 
             .button-form{
-                width: 18.75em;
+                width: 45vh;
                 margin: 0px 25px 10px;
                 border: 1px solid $bg-colorpink;
                 color: $black;
