--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,5 +1,5 @@
 
-@media screen and (min-width: 320px) and (max-width:560px) {
+@media screen and (max-width:560px) {
     .title{
         font-size: 2.20em;
         margin: 0px;
@@ -10,7 +10,7 @@
     }   
 
     .om-iframe{
-        width: 50vh;
+        width: 90%;
     }
 
     .om-paragraph{
@@ -22,13 +22,17 @@
     }
 
     .iframe-contact{
-        width: 50vh;
+        width: 100%;
         margin: 0px;
         padding: 0px;
     }
 
     .bg-form{
         width: 50vh;
+    }
+
+    .textarea{
+        width: 45vh;
     }
 
     .form-title{
@@ -71,10 +75,6 @@
         width: 100vh;
         margin: 0px;
         padding: 0px;
-    }
-
-    .bg-form{
-        width: 100vh;
     }
 
     .form-title{
