--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+
 $bg-colorpink: rgb(247, 7, 118);
 $black: rgb(20, 16, 16);
 $lyrics: rgb(255, 255, 255);
