--- a/scss/_img.scss
+++ b/scss/_img.scss
@@ -10,11 +10,11 @@
 }
 
 .item1{
-    background-image: url("../media/images/1.png");
+    background-image: url("../media/images/1.jpg");
     @include img-item
 }
 .item2{
-    background-image: url("../media/images/2.png");
+    background-image: url("../media/images/2.jpg");
     @include img-item
 }
 
