--- a/scss/_bgpages.scss
+++ b/scss/_bgpages.scss
@@ -30,7 +30,7 @@
                 color: $lyrics;
                 text-align: justify;
                 line-height: 1.562em;
-                padding-right: 50px;
+                padding-right: 2%;
             }   
         }     
     }
