--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,5 +1,5 @@
 .main-form{
-    background-image: url("../media/images/backgr.png");
+    background-image: url("../media/images/backgr.jpg");
     @include no-repeat;
     @include img-item;
     display: flex;
