--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   height: 60px; }
 
 .bg-ourmission {
-  background-image: url(../media/images/background.png);
+  background-image: url("../media/images/background.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
