correción de carrousel y optimización de imagenes

--- a/scss/_bgpages.scss
+++ b/scss/_bgpages.scss
@@ -37,7 +37,7 @@
 }
 
 .bg-au{
-    background-image: url("../media/images/backgr.png");
+    background-image: url("../media/images/backgr.jpg");
     @include img-item;
     @include no-repeat;
     padding: 20px;
