--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
         padding-right: 2%; }
 
 .bg-au {
-  background-image: url("../media/images/backgr.png");
+  background-image: url("../media/images/backgr.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
