--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   height: 60px; }
 
 .bg-ourmission {
-  background-image: url("../media/images/background.png");
+  background-image: url("../media/images/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -65,7 +65,7 @@
   background-image: url("../media/images/sobrenosotros.png");
   background-size: cover;
   background-position: center;
-  height: 450px;
+  height: 550px;
   border-radius: 0; }
   .jumbotron .title {
     font-family: Arial, Helvetica, sans-serif;
@@ -85,6 +85,9 @@
     text-align: center; }
 
 /* JUMBOTRON END*/
+.w-100 {
+  height: 100%; }
+
 .navbar {
   background-color: #f70776;
   color: #141010; }
