correcion de background

--- a/scss/_jumbo.scss
+++ b/scss/_jumbo.scss
@@ -1,7 +1,7 @@
 /*---JUMBOTRON- INDEX --*/
 .jumbotron{
     @include flex;
-    background-image: url("../media/images/sobrenosotros.png");
+    background-image: url("../media/images/homebackgr.jpg");
     @include img-item;
     height: 550px;
     border-radius: 0;
