--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-image: url("../media/images/sobrenosotros.png");
+  background-image: url("../media/images/homebackgr.jpg");
   background-size: cover;
   background-position: center;
   height: 550px;
